test/assets/invalid/if/if-expect-bool.hs
import Prelude
a = if (const 1 True) then 1 else 2